04/03/2003 Bob Rossi <bob_rossi@cox.net>

    * interface.c ( if_draw ): Removed a function that called refresh
    on the status bar. Also, Added a check to refresh the cgdb window
    if focus == cgdb.

04/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Removed filedlg's main loop: filedlg's main loop is gone. It is now
    driven from cgdb's main loop. It recieve's a char at a time.
    * Removed call to wgetch in the process of removing filedlg's main loop
    * Removed optimizations from sources.c and scroller.c: I added a variable
    to determine if these objects needed to be displayed again. They are not
    worth the effort to maintain, since sometimes the screen NEEDS to be
    drawn again.

04/01/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb now works on windows XP in cygwin: Fixed creation of home directory.
    * Try to make configure fail if readline is not installed on system.

03/29/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed all of cgdb's to work with autoconf: All of the files that make up
    cgdb now test to see if a header is available before it is included.

03/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed cgdb to version 0.3.0 in cvs.

03/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed resizing with new input library: cgdb now writes to a pipe in the
    signal handler that gets triggered in the select loop which does the
    resize. It used to do ungetch.
    * Fixed return values of _input functions in cgdb.c: These functions would
    quit on there own. They have no right to do so, they should report an
    error and have cgdb quit in some common location
    * Changed configure from --with-driver to --with-drivers: The reason for
    this is because now there are several driver programs that can be used to
    test cgdb.
    * Removed cgdb's handling of esc code sequences: cgdb was looking for esc
    sequences. It was looking for Shift-Arrow keys and Home and End. This has
    been replaced with new input library.
