@@ -158,6 +158,24 @@ void source_next(struct sviewer *sview) {
     sview->cur = sview->queue[sview->queue_index];
 }
 
+/* get_relative_node:  Returns a pointer to the node that matches the 
+ * ------------------  given relative path.
+ 
+ *   lpath:  Full path to source file
+ *
+ * Return Value:  Pointer to the matching node, or NULL if not found.
+ */
+static struct list_node *get_relative_node(struct sviewer *sview, const char *lpath)
+{
+    struct list_node *cur;
+    
+    for (cur = sview->list_head; cur != NULL; cur = cur->next)
+         if (strcmp(lpath, cur->lpath) == 0)
+             return cur;
+    
+    return NULL; 
+}
+
 /* get_node:  Returns a pointer to the node that matches the given path.
  * ---------
  
@@ -288,6 +306,25 @@ int source_add(struct sviewer *sview, const char *path)
     }
     
     return 0;
+}
+
+int source_set_relative_path(
+            struct sviewer *sview, 
+            const char *path, 
+            const char *lpath) {
+
+    struct list_node *node = sview->list_head;
+
+    while ( node != NULL ) {
+        if ( strcmp(node->path, path ) == 0) {
+            node->lpath = strdup(lpath);
+            return 0;
+        }
+
+        node = node->next;
+    } 
+
+    return -1;
 }
 
 int source_del(struct sviewer *sview, const char *path)
@@ -633,12 +670,8 @@ void source_disable_break(struct sviewer *sview, const char *path, int line)
 {
     struct list_node *node;
 
-    if ((node = get_node(sview, path)) == NULL){
-        if (source_add(sview, path))
-            return;
-        else if ((node = get_node(sview, path)) == NULL)
-            return;
-    }
+    if ((node = get_relative_node(sview, path)) == NULL)
+        return;
 
     if (node->buf.tlines == NULL)
         if (load_file(node))
@@ -652,12 +685,8 @@ void source_enable_break(struct sviewer *sview, const char *path, int line)
 {
     struct list_node *node;
 
-    if ((node = get_node(sview, path)) == NULL){
-        if (source_add(sview, path))
-            return;
-        else if ((node = get_node(sview, path)) == NULL)
-            return;
-    }
+    if ((node = get_relative_node(sview, path)) == NULL)
+        return;
 
     if (node->buf.tlines == NULL)
         if (load_file(node))
